# Messenger_CourseWork

./: .gitignore  CMakeLists.txt  README.md
include/client/: Client.h
include/common/: Hasher.h  Logger.h  Packet.h  PacketType.h  PacketUtils.h
include/server/: DataBaseManager.h  Server.h
src/client/: Client.cpp  main.cpp
src/common/: Hasher.cpp  Logger.cpp
src/server/: DataBaseManager.cpp  Server.cpp  main.cpp
